RESOLVED FIXED230361
Stringify process termination reason in dispatchProcessDidTerminate logging
https://bugs.webkit.org/show_bug.cgi?id=230361
Summary Stringify process termination reason in dispatchProcessDidTerminate logging
Chris Dumez
Reported 2021-09-16 10:39:40 PDT
Stringify process termination reason in dispatchProcessDidTerminate logging.
Attachments
Patch (2.41 KB, patch)
2021-09-16 10:40 PDT, Chris Dumez
no flags
Chris Dumez
Comment 1 2021-09-16 10:40:17 PDT
Geoffrey Garen
Comment 2 2021-09-16 10:42:38 PDT
Comment on attachment 438368 [details] Patch r=me
EWS
Comment 3 2021-09-16 15:46:39 PDT
Committed r282611 (241771@main): <https://commits.webkit.org/241771@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 438368 [details].
Radar WebKit Bug Importer
Comment 4 2021-09-16 15:47:19 PDT
Note You need to log in before you can comment on or make changes to this bug.