Stringify process termination reason in dispatchProcessDidTerminate logging https://bugs.webkit.org/show_bug.cgi?id=230361

Reviewed by Geoffrey Garen.

* UIProcess/WebPageProxy.cpp:
(WebKit::processTerminationReasonToString):
(WebKit::WebPageProxy::dispatchProcessDidTerminate):


Canonical link: https://commits.webkit.org/241771@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@282611 268f45cc-cd09-0410-ab3c-d52691b4dbfc